Clean up deprecation warnings, resolve unchecked casts, and fix NeoForge loader range